<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.tasker.ui.HomeFragment"
        android:label="Edman Cota"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_fragment_to_settings_fragment"
            app:destination="@id/settings_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_task_view_fragment"
            app:destination="@id/task_view_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_overview_fragment"
            app:destination="@id/overview_fragment" />
    </fragment>
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.example.tasker.ui.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment" />
        <action
            android:id="@+id/action_settings_fragment_to_about_fragment"
            app:destination="@id/about_fragment" />
        <action
            android:id="@+id/action_settings_fragment_to_premium_fragment"
            app:destination="@id/premium_fragment" />
        <action
            android:id="@+id/action_settings_fragment_to_support_fragment"
            app:destination="@id/support_fragment" />
    </fragment>
    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.example.tasker.ui.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/task_view_fragment"
        android:name="com.example.tasker.ui.TaskViewFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task_view"/>
    <fragment
        android:id="@+id/about_fragment"
        android:name="com.example.tasker.ui.AboutFragment"
        android:label="@string/about_text"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_about_fragment_to_brand_fragment"
            app:destination="@id/brand_fragment" />
        <action
            android:id="@+id/action_about_fragment_to_acknowledgements_fragment"
            app:destination="@id/acknowledgements_fragment" />
    </fragment>
    <fragment
        android:id="@+id/premium_fragment"
        android:name="com.example.tasker.ui.PremiumFragment"
        android:label="Premium"
        tools:layout="@layout/fragment_premium" />
    <fragment
        android:id="@+id/overview_fragment"
        android:name="com.example.tasker.ui.OverviewFragment"
        android:label="Overview"
        tools:layout="@layout/fragment_overview" />
    <fragment
        android:id="@+id/brand_fragment"
        android:name="com.example.tasker.ui.BrandFragment"
        android:label="@string/app_name_text"
        tools:layout="@layout/fragment_brand" />
    <fragment
        android:id="@+id/acknowledgements_fragment"
        android:name="com.example.tasker.ui.AcknowledgementsFragment"
        android:label="@string/acknowledgements_text"
        tools:layout="@layout/fragment_acknowledgements"/>
    <fragment
        android:id="@+id/support_fragment"
        android:name="com.example.tasker.ui.SupportFragment"
        android:label="fragment_support"
        tools:layout="@layout/fragment_support" />
</navigation>